--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@animatereactnative/marquee": "^0.2.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -29,8 +30,9 @@
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "react-native-svg": "14.1.0"
+    "react-native-reanimated": "~3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
